<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />
    </android.support.v4.app.FragmentTabHost>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray"/>

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:layout_gravity="bottom"
        android:background="#fafafa"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/RadioButtonBottomTab"
            android:checked="true"
            android:drawableTop="@drawable/icon_home"
            android:text="@string/tab_tv_index"/>

        <RadioButton
            android:id="@+id/rb_circle"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/icon_circle"
            android:text="@string/tab_tv_circle"/>


        <RadioButton
            android:id="@+id/rb_mall"
            style="@style/RadioButtonBottomTabMiddle"
            android:layout_marginTop="5dp"
            android:drawableTop="@drawable/icon_scan"/>

        <RadioButton
            android:id="@+id/rb_trade"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/icon_trade"
            android:text="@string/tab_tv_trade"/>

        <RadioButton
            android:id="@+id/rb_user"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/icon_selfinfo"
            android:text="@string/tab_tv_mine"/>
    </RadioGroup>

</LinearLayout>