<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.daxueoo.shopnc.widgets.RoundedImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:maxHeight="54dp"
            android:maxWidth="54dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_defautl_avatar_white"
            app:bottomLeftRadius="50dp"
            app:bottomRightRadius="50dp"
            app:topLeftRadius="50dp"
            app:topRightRadius="50dp"/>

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="left"
            android:hint="@string/et_text_username"
            android:textColor="@color/alpha_white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            whatever:emptyErrorString="不能为空"
            whatever:testErrorString="格式错误"
            whatever:testType="alpha"/>

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="left"
            android:hint="@string/et_text_password"
            android:inputType="textPassword"
            android:textColor="@color/alpha_white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            whatever:emptyErrorString="不能为空"
            whatever:testErrorString="格式错误"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_btn"
            android:text="@string/btn_login"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/tv_register"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>