<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_shop_sort_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_sort_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_tran2gray_sel"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_sort_new"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_sort_new_normal" />

            <TextView
                style="@style/TextViewBody"
                android:layout_marginLeft="8dp"
                android:text="@string/tv_shop_new"
                android:textColor="@color/txt_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sort_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_tran2gray_sel"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_sort_price"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_sort_price_normal" />

            <TextView
                style="@style/TextViewBody"
                android:layout_marginLeft="8dp"
                android:text="@string/tv_shop_price"
                android:textColor="@color/txt_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sort_sell_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_tran2gray_sel"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_sort_sell_count"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_sort_sell_count_normal" />

            <TextView
                style="@style/TextViewBody"
                android:layout_marginLeft="8dp"
                android:text="@string/tv_shop_sell"
                android:textColor="@color/txt_gray" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_sort_hot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_tran2gray_sel"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_sort_hot"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_sort_hot_normal" />
            <TextView
                style="@style/TextViewBody"
                android:layout_marginLeft="8dp"
                android:text="@string/tv_shop_hot"
                android:textColor="@color/txt_gray" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray"/>

</LinearLayout>