<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/divide_1_12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/ic_img_line_v"
        android:showDividers="middle"
        android:dividerPadding="45dp"
        android:background="@color/stand_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_my_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/iv_my_order"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/user_btn_goods"
                android:gravity="end"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/tv_my_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_user_order"
                android:textSize="14sp"
                android:gravity="start"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my_trade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/user_btn_trade"
                android:gravity="end"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_user_trade"
                android:textSize="14sp"
                android:gravity="start"
                android:layout_gravity="center"
                />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/divide_13_top" />

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@color/stand_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/clickProject"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="15sp"
            android:paddingRight="15sp">

            <View
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/user_btn_send" />


            <TextView
                android:id="@+id/titleProject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/btn_user_send"
                android:textColor="#222222"
                android:textSize="16sp" />

            <include layout="@layout/list_item_common_arrow" />

        </LinearLayout>

        <include layout="@layout/divide_1_12" />


        <LinearLayout
            android:id="@+id/clickMaopao"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="15sp"
            android:paddingRight="15sp">

            <View
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/user_btn_posts" />

            <TextView
                android:id="@+id/titleMaopao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/btn_user_posts"
                android:textColor="#222222"
                android:textSize="16sp" />

            <include layout="@layout/list_item_common_arrow" />

        </LinearLayout>

        <include layout="@layout/divide_1_12" />



        <include layout="@layout/divide_13_top" />

        <LinearLayout
            android:id="@+id/clickPointRecord2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="15sp"
            android:paddingRight="15sp">

            <View
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/user_fav_goods" />

            <TextView
                android:id="@+id/pointRecord2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/btn_user_fav_goods"
                android:textColor="#222222"
                android:textSize="16sp" />

            <include layout="@layout/list_item_common_arrow" />

        </LinearLayout>
        <include layout="@layout/divide_1_12" />
        <LinearLayout
            android:id="@+id/clickPointRecord"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="15sp"
            android:paddingRight="15sp">

            <View
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/user_fav_trade" />

            <TextView
                android:id="@+id/pointRecord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/btn_user_fav_serve"
                android:textColor="#222222"
                android:textSize="16sp" />

            <include layout="@layout/list_item_common_arrow" />

        </LinearLayout>
        <include layout="@layout/divide_1_12" />
        <LinearLayout
            android:id="@+id/clickTopic"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:paddingLeft="15sp"
            android:paddingRight="15sp">

            <View
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/user_fav_trade" />

            <TextView
                android:id="@+id/titleTopic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/btn_user_fav_trade"
                android:textColor="#222222"
                android:textSize="16sp" />

            <include layout="@layout/list_item_common_arrow" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
